--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="src/img/mini_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LOL Manager</title>
+    <title>LOL Team Manager</title>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/css/styles.css" rel="stylesheet" />    
   </head>
